--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^4.3.0",
-    "jest-junit": "^11.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "style-loader": "^1.2.1",
-    "webpack-cli": "^3.3.12",
-    "cypress": "^9.5.0"
-  },
+  "css-loader": "^4.3.0",
+  "jest-junit": "^11.1.0",
+  "react": "^16.13.1",
+  "react-dom": "^16.13.1",
+  "redux": "^4.2.1",
+  "react-redux": "^7.2.8",
+  "style-loader": "^1.2.1",
+  "webpack-cli": "^3.3.12",
+  "cypress": "^9.5.0"
+},
   "jest": {
     "moduleNameMapper": {
       "\\.(css|less|sass|scss)$": "<rootDir>/config/CSSStub.js"
